不要なものを削除

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>顔の砂化プロトタイプ</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="l-wrapper">
+      <div class="l-background">
+        <div class="p-background"></div>
+      </div>
+      <div class="l-main"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
