--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <div class="l-background">
         <div class="p-background"></div>
       </div>
-      <div class="l-main"></div>
+      <div class="l-main">
+        <video class="p-webcam-video" autoplay playsinline></video>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
