WebGPUを前提にするようにした。エラーメッセージを追加。

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="p-background"></div>
       </div>
       <div class="l-main">
+        <div class="p-error p-error--hidden">
+          <div class="p-error__message"></div>
+        </div>
         <video class="p-webcam-video" autoplay playsinline></video>
       </div>
     </div>
